[package]
name = "static_window"
version = "0.1.0"
authors = ["joshuazlin <joshlin@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visibility_graph = {path = "../visibility_graph"}
piston_window = "0.109.0"
